# defensive-toolkit

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrep.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt  start-api.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docker.yml  release.yml  tests.yml  validate-rules.yml
api/: auth.py  config.py  main.py  models.py
api/routers/: __init__.py  assets.py  compliance.py  dashboard.py  detection.py  hardening.py  incident_response.py  log_analysis.py  monitoring.py  siem.py  threat_hunting.py  threat_intel.py  webhooks.py
automation/: README.md
automation/actions/: enrichment.py  notification.py
automation/playbooks/examples/: vuln-remediation.yaml
automation/soar/shuffle/: README.md
compliance/: README.md
compliance/frameworks/: cis-checker.py  framework-mapper.py  nist-checker.py
compliance/policy/: example-baseline-policy.yaml  policy-checker.py
detection-rules/: COVERAGE_MATRIX.md  README.md
detection-rules/sigma/collection/: keylogging_detection.yml
detection-rules/sigma/command-and-control/: cobalt_strike_detection.yml  dns_beaconing.yml
detection-rules/sigma/credential-access/: browser_credential_theft.yml  credential_dumping_lsass.yml  dcsync_attack.yml  kerberoasting.yml
detection-rules/sigma/defense-evasion/: amsi_bypass.yml  etw_tampering.yml  timestomping.yml
detection-rules/sigma/discovery/: ad_enumeration.yml  cloud_discovery.yml  network_scanning.yml
detection-rules/sigma/execution/: mshta_execution.yml  regsvr32_execution.yml  suspicious_wmi_execution.yml
detection-rules/sigma/exfiltration/: cloud_exfiltration.yml  dns_tunneling.yml
detection-rules/sigma/impact/: shadow_copy_deletion.yml
detection-rules/sigma/lateral-movement/: rdp_hijacking.yml  winrm_lateral_movement.yml
detection-rules/sigma/persistence/: dll_search_order_hijacking.yml  registry_run_keys.yml  scheduled_task_creation.yml  wmi_event_subscription.yml
detection-rules/sigma/privilege-escalation/: named_pipe_impersonation.yml
detection-rules/suricata/: README.md
detection-rules/yara/: c2_frameworks.yar  loaders.yar  ransomware.yar  ransomware_2025.yar  suspicious_scripts.yar
detection-rules/zeek/: README.md
docs/: API.md  API_AUTHENTICATION.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  GETTING_STARTED.md  OPEN_SOURCE_STACK.md  PROJECT_STATUS.md  TESTING.md  TROUBLESHOOTING.md
examples/: README.md
forensics/: README.md
forensics/artifacts/browser/: extract-browser-history.py
forensics/artifacts/persistence/: hunt-persistence.ps1
forensics/disk/: carve-files.py  extract-mft.py
forensics/memory/: hunt-malware.py  volatility-auto-analyze.py
forensics/timeline/: analyze-timeline.py  generate-timeline.py
grafana/dashboards/: api-metrics.json  dashboard-provider.yml
hardening/linux/: README.md  __init__.py  audit-security-posture.sh  check-compliance.sh  harden-ubuntu.sh  restore-security-settings.sh
hardening/linux/config/: aide.conf
hardening/windows-security/: README.md
incident-response/playbooks/: ransomware_response.md
incident-response/runbooks/: README.md
incident-response/runbooks/actions/: __init__.py
incident-response/scripts/: linux-triage.sh  windows-triage.ps1
infra/docker/: Dockerfile  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml
infra/grafana/datasources/: prometheus.yml
infra/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
infra/nginx/: Dockerfile
infra/postman/: Docker.postman_environment.json  Production.postman_environment.json
log-analysis/: README.md
log-analysis/analysis/: anomaly-detector.py
monitoring/: README.md
monitoring/health/: check-security-tools.ps1
nginx/: Dockerfile  nginx.conf
playbooks/automation/: playbook-engine.py
playbooks/incident-response/: malware_infection.md
postman/: Defensive-Toolkit-API.postman_collection.json  Local-Development.postman_environment.json  README.md
prometheus/: alerts.yml  prometheus.yml
rules/: COVERAGE_MATRIX.md
rules/yara/: infostealers.yar  ransomware.yar  suspicious_scripts.yar  webshells.yar
rust/log_parser/: Cargo.toml  README.md  pyproject.toml
rust/log_parser/benches/: parser_benchmark.rs
rust/log_parser/src/: entry.rs  formats.rs  lib.rs  parallel.rs
scripts/: cleanup.py  deploy.sh  docker-test.sh  security-scan.sh  validate_detection_rules.py  validate_project.py
src/defensive_toolkit/: __init__.py  __main__.py
tests/: README.md  conftest.py
tests/api/: conftest.py  test_assets.py  test_auth.py  test_automation.py  test_compliance.py  test_correlation.py  test_dashboard.py  test_detection.py  test_endpoints.py  test_forensics.py  test_hardening.py  test_incident_response.py  test_log_analysis.py  test_monitoring.py  test_notifications.py  test_scheduler.py  test_siem.py  test_threat_hunting.py  test_threat_intel.py  test_vulnerability.py  test_webhook_delivery.py  test_webhooks.py  test_websocket.py
tests/fixtures/: factories.py
tests/integration/: test_api_workflows.py  test_siem_integration.py  test_soar_workflows.py
tests/log_analysis/: __init__.py  test_log_parser_fast.py
tests/mocks/: __init__.py  external_services.py
tests/performance/: test_api_load.py
tests/security/: __init__.py  test_api_security.py  test_auth_security.py
tests/unit/: test_telemetry.py
threat-hunting/: README.md
threat-intel/misp/: README.md
threat-intel/opencti/: README.md
tools/: Cargo.toml
tools/cleanup/: Cargo.toml
tools/cleanup/src/: main.rs
tools/scripts/: README.md  __init__.py  cleanup.py  generate_docs.py  validate_detection_rules.py  validate_project.py
vulnerability-mgmt/prioritization/: risk-scorer.py
vulnerability-mgmt/scanners/: nmap-vuln-scan.py  openvas-scan.py
(+232 files in other folders)
