[workspace]
resolver = "2"
members = [
    "tools/cleanup",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/defensive-toolkit"

[workspace.dependencies]
# Shared dependencies across Rust tools
walkdir = "2"
colored = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
