[project]
name = "defensive-toolkit"
version = "1.2.0"
description = "Blue team security tools for detection, monitoring, incident response, and threat hunting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "David Dashti", email = "david.at.dashti@outlook.com" }
]
keywords = ["security", "blue-team", "detection", "incident-response", "forensics", "compliance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "yara-python>=4.5.0",
    "sigma-cli>=1.0.0",
    "scapy>=2.5.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pefile>=2023.2.7",
    "python-magic>=0.4.27",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "python-json-logger>=2.0.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
# Optional Windows-specific dependencies
windows = [
    "pywin32>=306",
    "wmi>=1.5.1",
]

# Optional threat intelligence APIs
threat-intel = [
    "shodan>=1.31.0",
    "virustotal-api>=1.1.11",
    "greynoise>=2.1.0",
]

# Optional advanced analysis tools
advanced = [
    "volatility3>=2.5.0",
    "unicorn>=2.0.1",
]

# All optional dependencies
all = [
    "defensive-toolkit[windows,threat-intel,advanced]",
]

[project.urls]
Homepage = "https://github.com/Dashtid/defensive-toolkit"
Repository = "https://github.com/Dashtid/defensive-toolkit"
Issues = "https://github.com/Dashtid/defensive-toolkit/issues"
Documentation = "https://github.com/Dashtid/defensive-toolkit/blob/main/docs/README.md"
Changelog = "https://github.com/Dashtid/defensive-toolkit/blob/main/docs/CHANGELOG.md"

[project.scripts]
# Main CLI entry point
defensive-toolkit = "defensive_toolkit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defensive_toolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/rust",
    "/tools",
    "/rules",
    "/playbooks",
    "/tests",
    "/docs",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.0",
    "pytest-benchmark>=5.1.0",
    "bandit>=1.8.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage[toml]>=7.6.0",
    "maturin>=1.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",  # Show summary of all test outcomes
    "-v",   # Verbose output
    "--strict-markers",  # Strict marker usage
    "--tb=short",  # Shorter traceback format
    "--cov=src/defensive_toolkit",  # Coverage for package
    "--cov-report=html",  # HTML coverage report
    "--cov-report=term-missing",  # Terminal report with missing lines
    "--cov-report=json",  # JSON report for CI/CD
    # Coverage threshold disabled - many tests skipped in CI due to missing tools
    # "--cov-fail-under=70",  # Fail if coverage below 70%
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "windows: marks tests that require Windows platform",
    "linux: marks tests that require Linux platform",
    "requires_network: marks tests that require network access",
    "requires_root: marks tests that require root/admin privileges",
]
filterwarnings = [
    "error",  # Turn warnings into errors
    "ignore::DeprecationWarning",  # Ignore deprecation warnings from dependencies
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/defensive_toolkit"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/examples/*",
]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "S",   # bandit security checks
]
ignore = [
    "E501",  # line too long (handled by black)
    "E722",  # bare except (used for simple error handling in parsers)
    "S101",  # Use of assert (needed for pytest)
    "S602",  # subprocess with shell=True (needed for compliance tools)
    "S603",  # subprocess call (needed for security tools)
    "S607",  # partial executable path (needed for security tools)
    "S106",  # Possible hardcoded password (false positives in security tools)
    "S107",  # Possible hardcoded password in function default
    "S104",  # Possible binding to all interfaces
    "S310",  # Audit URL open (needed for security tools)
    "S307",  # Use of possibly insecure function eval (needed for dynamic playbooks)
    "S105",  # Possible hardcoded password assigned (false positives for token_type)
    "S311",  # Standard pseudo-random (not used for crypto, just mock data)
    "S110",  # try-except-pass (acceptable for simple error handling)
    "S314",  # XML parsing (needed for nmap/security scanner output)
    "C403",  # Unnecessary list comprehension in set()
    "C414",  # Unnecessary list() call within sorted()
]

[tool.ruff.lint.per-file-ignores]
"playbooks/**/*.py" = [
    "S310",  # Allow URL open in playbooks
    "S307",  # Allow eval in playbook engines
    "F401",  # Allow unused imports in playbooks (dynamic loading)
    "F841",  # Allow unused variables in playbooks
]
"src/defensive_toolkit/api/**/*.py" = [
    "S105",  # Allow token_type defaults
    "S311",  # Allow random for mock/test data generation
    "F841",  # Allow unused variables in complex routers
    "C401",  # Allow unnecessary generators (list(set(...)) pattern)
]
"src/defensive_toolkit/automation/**/*.py" = [
    "F841",  # Allow unused variables in automation actions
]
"src/defensive_toolkit/compliance/**/*.py" = [
    "F841",  # Allow unused variables in compliance checkers
]
"src/defensive_toolkit/forensics/**/*.py" = [
    "F841",  # Allow unused variables in forensics tools
    "F401",  # Allow unused imports (availability checks)
]
"src/defensive_toolkit/incident_response/**/*.py" = [
    "F841",  # Allow unused variables in incident response
]
"src/defensive_toolkit/log_analysis/**/*.py" = [
    "F841",  # Allow unused variables in log analysis
]
"src/defensive_toolkit/monitoring/**/*.py" = [
    "F841",  # Allow unused variables in monitoring
    "F401",  # Allow unused imports (availability checks)
]
"src/defensive_toolkit/vulnerability_mgmt/**/*.py" = [
    "F841",  # Allow unused variables in vuln management
]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
    "S105",  # Allow hardcoded passwords in tests
    "S106",  # Allow hardcoded credentials in tests
    "S108",  # Allow temp file paths in tests
    "F841",  # Allow unused variables in test fixtures
    "E402",  # Allow imports not at top of file in mocks
    "E712",  # Allow equality comparisons to False in tests
    "E741",  # Allow ambiguous variable names in tests
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
    "examples",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "examples"]
skips = ["B101", "B601", "B603", "B607"]  # Allow assert, subprocess for security tools
