[package]
name = "log_parser_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance log parser with Python bindings"
repository = "https://github.com/Dashtid/defensive-toolkit"

[lib]
name = "_log_parser_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }

# High-performance regex
regex = "1.11"

# Parallel processing
rayon = "1.10"

# Memory-mapped files for large log files
memmap2 = "0.9"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time parsing
chrono = "0.4"

# Error handling
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
