[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "log-parser-rs"
version = "0.1.0"
description = "High-performance log parser with Rust backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "David Dashti", email = "david.at.dashti@outlook.com" }
]
keywords = ["log", "parser", "rust", "performance", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/Dashtid/defensive-toolkit"
Repository = "https://github.com/Dashtid/defensive-toolkit"

[tool.maturin]
# Build for Python 3.10+ with stable ABI
# Module installs at top-level to avoid conflicting with defensive-toolkit package
module-name = "_log_parser_rs"
features = ["pyo3/extension-module"]
strip = true
